--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/lodash": "^4.14.197",
     "@types/mongoose": "^5.11.97",
     "dotenv": "^16.3.1",
     "mongoose": "^7.4.5",
@@ -29,6 +30,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "http": "0.0.1-security"
+    "http": "0.0.1-security",
+    "lodash": "^4.17.21"
   }
 }
